--- a/views/user/editProfile.ejs
+++ b/views/user/editProfile.ejs
@@ -306,7 +306,7 @@
             <h5 class="card-title">Edit Profile</h5>
 
             <!-- General Form Elements -->
-            <form action="/LodgeComplaint" method="post">
+            <form action="/EditUser" method="post">
               <div class="row mb-3">
                 <label for="inputText" class="col-sm-2 col-form-label">Name</label>
                 <div class="col-sm-10">
@@ -354,6 +354,20 @@
               </div>
 
               <div class="row mb-3">
+                <label for="inputText" class="col-sm-2 col-form-label">Country</label>
+                <div class="col-sm-10">
+                  <input type="text" name="State" id=""placeholder="Country" class="form-control">
+                </div>
+              </div>
+
+              <div class="row mb-3">
+                <label for="inputText" class="col-sm-2 col-form-label">Pin Code</label>
+                <div class="col-sm-10">
+                  <input type="text" name="State" id=""placeholder="Pincode" class="form-control">
+                </div>
+              </div>
+
+              <div class="row mb-3">
                 <label for="inputText" class="col-sm-2 col-form-label">Aadhar Number</label>
                 <div class="col-sm-10">
                   <input type="number" name="Aadhar" id=""placeholder="Mobile" class="form-control">
@@ -363,7 +377,7 @@
               <div class="row mb-3">
                 <label for="inputText" class="col-sm-2 col-form-label">Mobile Number</label>
                 <div class="col-sm-10">
-                  <input type="number" name="Mobile" id=""placeholder="Mobile" class="form-control">
+                  <input type="tel" name="Mobile" id=""placeholder="Mobile" class="form-control">
                 </div>
               </div>
 
