--- a/views/user/editProfile.ejs
+++ b/views/user/editProfile.ejs
@@ -340,9 +340,9 @@
               </div>
 
               <div class="row mb-3">
-                <label for="inputText" class="col-sm-2 col-form-label">City</label>
+                <label for="inputText" class="col-sm-2 col-form-label">City/Town</label>
                 <div class="col-sm-10">
-                  <input type="text" name="City/Town" id="" placeholder="City" class="form-control">
+                  <input type="text" name="City" id="" placeholder="" class="form-control">
                 </div>
               </div>
             
@@ -356,21 +356,21 @@
               <div class="row mb-3">
                 <label for="inputText" class="col-sm-2 col-form-label">Country</label>
                 <div class="col-sm-10">
-                  <input type="text" name="State" id=""placeholder="Country" class="form-control">
+                  <input type="text" name="Country" id=""placeholder="Country" class="form-control">
                 </div>
               </div>
 
               <div class="row mb-3">
                 <label for="inputText" class="col-sm-2 col-form-label">Pin Code</label>
                 <div class="col-sm-10">
-                  <input type="text" name="State" id=""placeholder="Pincode" class="form-control">
+                  <input type="text" name="Pincode" id=""placeholder="Pincode" class="form-control">
                 </div>
               </div>
 
               <div class="row mb-3">
                 <label for="inputText" class="col-sm-2 col-form-label">Aadhar Number</label>
                 <div class="col-sm-10">
-                  <input type="number" name="Aadhar" id=""placeholder="Mobile" class="form-control">
+                  <input type="number" name="Aadhar" id=""placeholder="Aadhar" class="form-control">
                 </div>
               </div>
 
