--- a/views/admin/admindashbord.ejs
+++ b/views/admin/admindashbord.ejs
@@ -39,7 +39,7 @@
     <div class="d-flex align-items-center justify-content-between">
       <a href="\AdminDashboard" class="logo d-flex align-items-center">
         <img src="assets/img/logo.png" alt="">
-        <span class="d-none d-lg-block">Yukti</span>
+        <span class="d-block">Yukti</span>
       </a>
       <i class="bi bi-list toggle-sidebar-btn"></i>
     </div><!-- End Logo -->
