--- a/views/auth/confirmOTP.ejs
+++ b/views/auth/confirmOTP.ejs
@@ -42,9 +42,9 @@
             <div class="col-lg-4 col-md-6 d-flex flex-column align-items-center justify-content-center">
 
               <div class="d-flex justify-content-center py-4">
-                <a href="\UserDashbord" class="logo d-flex align-items-center w-auto">
+                <a href="/UserDashbord" class="logo d-flex align-items-center w-auto">
                   <img src="assets/img/logo.png" alt="">
-                  <span class="d-none d-lg-block">Yukti</span>
+                  <span class="d-block">Yukti</span>
                 </a>
               </div><!-- End Logo -->
 
