--- a/views/auth/forgotPassword.ejs
+++ b/views/auth/forgotPassword.ejs
@@ -43,7 +43,7 @@
               <div class="d-flex justify-content-center py-4">
                 <a href="/UserDashbord" class="logo d-flex align-items-center w-auto">
                   <img src="assets/img/logo.png" alt="">
-                  <span class="d-none d-lg-block">Yukti</span>
+                  <span class="d-block">Yukti</span>
                 </a>
               </div><!-- End Logo -->
 
